--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-server.port=5505
+server.port=${env.SERVER_PORT:5505}
 
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:mysql://localhost:5506/todolist
-spring.datasource.username=todolist
-spring.datasource.password=123456
+spring.datasource.url=${env.SPRING_DATASOURCE_URL}
+spring.datasource.username=${env.SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${env.SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
