--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -31,13 +31,18 @@ jobs:
       uses: gradle/gradle-build-action@4137be6a8bf7d7133955359dbd952c0ca73b1021
       with:
         arguments: build
+        
+    - uses: actions/upload-artifact@v2
+      with:
+        name: Package
+        path: build/libs
 
     # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
     # the publishing section of your build.gradle
-    - name: Publish to GitHub Packages
-      uses: gradle/gradle-build-action@4137be6a8bf7d7133955359dbd952c0ca73b1021
-      with:
-        arguments: publish
-      env:
-        USERNAME: ${{ github.actor }}
-        TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#     - name: Publish to GitHub Packages
+#       uses: gradle/gradle-build-action@4137be6a8bf7d7133955359dbd952c0ca73b1021
+#       with:
+#         arguments: publish
+#       env:
+#         USERNAME: ${{ github.actor }}
+#         TOKEN: ${{ secrets.GITHUB_TOKEN }}
