--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,11 +31,6 @@ jobs:
       uses: gradle/gradle-build-action@4137be6a8bf7d7133955359dbd952c0ca73b1021
       with:
         arguments: build
-        
-    - uses: actions/upload-artifact@v2
-      with:
-        name: Package
-        path: build/libs
 
     # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
     # the publishing section of your build.gradle
@@ -46,3 +41,15 @@ jobs:
 #       env:
 #         USERNAME: ${{ github.actor }}
 #         TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  upload:
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      contents: read
+    
+    steps:
+        - uses: actions/upload-artifact@v2
+          with:
+            name: Package
+            path: build/libs
+  
