--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
     
     - uses: actions/upload-artifact@v2
       with:
-        name: Package
+        name: java-app
         path: build/libs
 
     # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
