--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -5,7 +5,7 @@
 # This workflow will build a package using Gradle and then publish it to GitHub packages when a release is created
 # For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#Publishing-using-gradle
 
-name: CI
+name: build and deploy
 
 on: workflow_dispatch
 
@@ -34,7 +34,7 @@ jobs:
     
     - uses: actions/upload-artifact@v2
       with:
-        name: java-app
+        name: app
         path: build/libs
 
     # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
@@ -57,7 +57,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v2
         with:
-          name: java-app
+          name: app
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
