--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.username=${env.SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${env.SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
+management.endpoints.web.exposure.include: env,health,info
+
